Fixed an alignment bug thanks to SomeBottle

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -137,7 +137,7 @@ $minecraft-color: (
 }
 
 .server-splash {
-  margin-bottom: 2rem;
+  height: 100%;
   background: $server-splash-bg;
 }
 
